--- a/李世豪 第四周作业/plane/settings/project.json
+++ b/李世豪 第四周作业/plane/settings/project.json
@@ -40,10 +40,10 @@
   "excluded-modules": [
     "3D Physics/Builtin"
   ],
-  "last-module-event-record-time": 0,
-  "design-resolution-width": 960,
-  "design-resolution-height": 640,
-  "fit-width": false,
+  "last-module-event-record-time": 1597635592943,
+  "design-resolution-width": 640,
+  "design-resolution-height": 960,
+  "fit-width": true,
   "fit-height": true,
   "use-project-simulator-setting": false,
   "simulator-orientation": false,
