--- a/zhangwubing/GameSnake/settings/project.json
+++ b/zhangwubing/GameSnake/settings/project.json
@@ -10,7 +10,7 @@
   "excluded-modules": [
     "3D Physics/Builtin"
   ],
-  "last-module-event-record-time": 0,
+  "last-module-event-record-time": 1625106682617,
   "design-resolution-width": 1280,
   "design-resolution-height": 720,
   "fit-width": false,
